5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1712_2497.log
== TEST (2019-05-08 15:11:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 20
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:11:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:15:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.139624
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:15:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:16:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:16:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.178035
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:21:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:21:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.158907
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
Quantia inicial: Tempo de investimento: 1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:21:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:21:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.137238
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
Quantia inicial: Tempo de investimento: 727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
Quantia inicial: Tempo de investimento: 928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
Quantia inicial: Tempo de investimento: 727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.200046
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
Quantia inicial: Tempo de investimento: 727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
Quantia inicial: Tempo de investimento: 928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
Quantia inicial: Tempo de investimento: 1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:21:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:21:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.356511
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
Quantia inicial: Tempo de investimento: 727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
Quantia inicial: Tempo de investimento: 928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.362693
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
Quantia inicial: Tempo de investimento: 727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
Quantia inicial: Tempo de investimento: 928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.197435
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2497/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.173288
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.156201
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:33) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.279131
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
928.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.335878
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.395713
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.42952
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.626565
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
1552.02
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.737611
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
1552.02
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.406444
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
1552.02
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
928.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.327394
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.306336
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2497/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.298003
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.396047
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
1552.02
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.631877
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
1552.02
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.472346
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
1552.02
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:

-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
928.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.495182
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.45814
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2497/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.459728
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2497/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.433531
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
1552.02
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.415693
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
1552.02
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.404895
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:

-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
928.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.395214
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.573006
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.59455
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.500883
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
1552.02
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.440737
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
1552.02
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.518081
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
1552.02
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
727.87
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
928.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.498497
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.492246
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.483873
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.457853
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
1552.02
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.457044
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
1552.02
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
727.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.486988
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
1552.02
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:

-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
Quantia inicial: Tempo de investimento: 1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.497055
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
Quantia inicial: Tempo de investimento: 928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
Quantia inicial: Tempo de investimento: 1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.417075
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
Quantia inicial: Tempo de investimento: 928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
Quantia inicial: Tempo de investimento: 1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.335191
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1712/2497/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:21:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.333037
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
928.46
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
Quantia inicial: Tempo de investimento: 1552.02
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:22:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.184393
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:55:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 12:55:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.094486
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:00:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:01:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0 / 100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
i = 1

# Atualizacao de saldo
while (i <= tempo):
	i = i + 1
	rend = saldo * juros
	saldo = saldo + rend
	

	print(round(saldo, 2)) # Exibicao de resultados

-- EXECUTION TIME:
0.222245
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
